# cppman

./: CMakeLists.txt
cppman/: CMakeLists.txt
cppman/include/cppman/: CMakeLists.txt  argument.hpp  argument_parser.hpp  argument_register.hpp
cppman/source/: CMakeLists.txt  main.cpp
templates/CXX/console/: CMakeLists.txt
templates/CXX/console/!PROJECT!/: CMakeLists.txt
templates/CXX/console/!PROJECT!/source/: CMakeLists.txt
